# ChangeLog for app-cdr/mdf2iso
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-cdr/mdf2iso/ChangeLog,v 1.10 2007/02/21 20:17:35 peper Exp $

  21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  20 Dec 2006; Lars Weiler <pylon@gentoo.org> mdf2iso-0.3.0.ebuild,
  mdf2iso-0.3.0-r1.ebuild:
  Removed unneeded CFLAGS statement from compile-function.

  22 Jul 2006; Olivier Crête <tester@gentoo.org> mdf2iso-0.3.0-r1.ebuild:
  Stable on amd64

*mdf2iso-0.3.0-r1 (25 Mar 2006)

  25 Mar 2006; Luis Medinas <metalgod@gentoo.org>
  +files/mdf2iso-0.3.0-bigfiles.patch, +mdf2iso-0.3.0-r1.ebuild:
  Added a patch to fix a problem with files bigger than 2.4GB. Thanks to Szabo
  Bence <szbence@gmail.com> on bug #127372.

*mdf2iso-0.3.0 (21 Jul 2005)

  21 Jul 2005; Lars Weiler <pylon@gentoo.org> +mdf2iso-0.3.0.ebuild:
  Version bump; bug #97019.

  30 May 2005; Lars Weiler <pylon@gentoo.org> mdf2iso-0.2.1.ebuild:
  Changed to toolchain-funcs; bug #92745.

  12 Apr 2005; Jan Brinkmann <luckyduck@gentoo.org> mdf2iso-0.2.1.ebuild:
  added ~amd64 to KEYWORDS, fixes #88655

*mdf2iso-0.2.1 (08 Jan 2005)

  08 Jan 2005; Lars Weiler <pylon@gentoo.org> -mdf2iso-0.1.ebuild,
  +mdf2iso-0.2.1.ebuild:
  Version bump; bug #74035.

*mdf2iso-0.1 (03 Dec 2004)

  03 Dec 2004; Lars Weiler <pylon@gentoo.org> +metadata.xml,
  +mdf2iso-0.1.ebuild:
  Thanks to Joël <numlock (at) freesurf.ch> for the ebuild in Bug #68527.
