@@ -1,6 +1,10 @@
 # ChangeLog for app-cdr/mdf2iso
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-cdr/mdf2iso/ChangeLog,v 1.10 2007/02/21 20:17:35 peper Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-cdr/mdf2iso/ChangeLog,v 1.11 2008/06/06 21:08:37 drac Exp $
+
+  06 Jun 2008; Samuli Suominen <drac@gentoo.org> -mdf2iso-0.2.1.ebuild,
+  -mdf2iso-0.3.0.ebuild, mdf2iso-0.3.0-r1.ebuild:
+  Use mirrors:// for berlios.
 
   21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
   Transition to Manifest2.
